--- a/DOM Fundamentals/Guess Project/guessMyNumber.html
+++ b/DOM Fundamentals/Guess Project/guessMyNumber.html
@@ -31,18 +31,19 @@
         </div>
         <div class="section-action">
             <div class="check">
-                <input id="guessNumber" value="?" placeholder="?" type="text">
+                <input id="guessNumber" value="?" placeholder="?" type="number">
+
                 <button  id="checkButton" class="btn-check">Check !</button>
             </div>
             <div class="result">
                 <div class="action">
-                    <p class="too-low">Too Low</p>              
+                    <p class="too-low"></p>              
                 </div>
                 <div class="action">
                     <p>Score : <span id="score">20</span></p>              
                 </div>
                 <div class="action">
-                   <p>Highscore: <span id="highscore">20</span></p>              
+                   <p>Highscore: <span id="highscore"></span></p>              
                 </div>
             </div>
         </div>
